# RDLC_Serial_Protocol

./: .gitignore  README.md  rdlc.c  rdlc.h
examples/sendonly_linux/: CMakeLists.txt  README.txt  main.c  serial_port.c  serial_port.h
examples/sendrecv_ch32x035_stm32f103_stp/User/: main.c
examples/sendrecv_esp32/: README.txt
examples/sendrecv_esp32/RDLC_Example/: rdlc.c
examples/sendrecv_esp32/RDLC_Example/include/: rdlc.h
test/: CMakeLists.txt  makefile  rdlcCriticalTest.cpp  rdlcTest.cpp  rdlcTestPrivate.h  test
